# kata-sn60

./: .gitignore  README.md  pyproject.toml
deploy/sn60-inference-gateway/: Dockerfile
deploy/sn60-model-relay/: Dockerfile
deploy/sn60-runner/: Dockerfile  README.md  build.sh  docker-compose.yml  fixture_agent.py  tee_profile.py  test_agent.py
deploy/sn60-runner/sample-agent/: MINER-GUIDE.md  README.md  agent.py  sealed_inference_key.EXAMPLE  submission.json
kata_sn60/: __init__.py  benchmark_replay.py  challenge.py  challenge_inputs.py  cli.py  evaluate.py  king_cache.py  llm_review.py  mutation_canary.py  plugin.py  progress.py  promotion.py  round.py  round_inputs.py  sandbox_canary.py  screening.py  sn60_bitsec.py  static_screening.py  verify.py
kata_sn60/execution/: __init__.py  policy.py  tee_room.py
kata_sn60/validator_system/: __init__.py  challenge.py  inference_gateway.py  model_relay.py  project_selection.py  screening.py  tee_room.py
submissions/sn60__bitsec/miner/widecloud-20260718-01/: agent.py  (+2 more)
tests/: conftest.py  test_characterization_sn60.py  test_cli.py  test_core_challenge.py  test_core_round.py  test_king_cache.py  test_llm_review.py  test_mutation_canary.py  test_promotion_system.py  test_sandbox_canary.py  test_screening.py  test_sn60_bitsec.py  test_sn60_challenge.py  test_sn60_inference_gateway.py  test_sn60_model_relay.py  test_sn60_plugin.py  test_sn60_plugin_challenge.py  test_sn60_plugin_round.py  test_static_screen_dispatch.py  test_submissions.py  test_subnet_plugin_registry.py  test_tee_room.py  test_validator_system.py
