[project]
name = "kata-sn60"
version = "0.1.0"
description = "SN60 (Bitsec) subnet plugin for the Kata competition platform."
requires-python = ">=3.12"
dependencies = [
  "kata",
  # TDX quote verification for the sealed-room (TEE) SN60 execution path.
  "dcap-qvl>=0.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
kata-sn60-inference-gateway = "kata_sn60.validator_system.inference_gateway:main"

# Discovered by the Kata platform via the kata.subnets entry-point group.
[project.entry-points."kata.subnets"]
sn60 = "kata_sn60:SN60_BITSEC_PLUGIN"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kata_sn60"]

[tool.uv.sources]
kata = { path = "../kata", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
